.helm/releases/envoy-dqa.yaml
files:
  envoy.yaml: |-
    admin:
      access_log_path: /dev/null
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    static_resources:
      clusters:
      - name: service_google
        type: LOGICAL_DNS
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: service_google
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: google.com
                        port_value: 443
      - name: guardian
        type: STRICT_DNS
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        protocol_selection: USE_CONFIGURED_PROTOCOL
        http2_protocol_options: {}
        load_assignment:
          cluster_name: guardian
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 0.0.0.0
                        port_value: 9901
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              use_remote_address: false
              xff_num_trusted_hops: 1
              codec_type: auto
              stat_prefix: ingress_http
              http_filters:
              - name: envoy.filters.http.ratelimit
                config:
                  domain: rl
                  request_type: both # apply to both internal and external requests
                  failure_mode_deny: false
                  stage: 0
                  rate_limit_service:
                    grpc_service:
                      envoy_grpc:
                        cluster_name: guardian
              - name: envoy.filters.http.router
                config: {}
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                          prefix: "/"
                      route:
                        cluster: service_google
                        rate_limits:
                          - actions:
                            - remote_address: {}
                            - request_headers:
                                header_name: ":authority"
                                descriptor_key: "authority"
                            - request_headers:
                                header_name: ":method"
                                descriptor_key: "method"
                            - request_headers:
                                header_name: ":path"
                                descriptor_key: "path"
